--- a/style.css
+++ b/style.css
@@ -15,11 +15,13 @@ body {
 
 .todo-wrapper {
     background: #FFF;
+    width: 45%;
     margin: 3rem auto;
-    min-width: 600px;
+    /* min-width: 600px; */
     padding: 2rem;
     border-radius: 20px;
     box-shadow: 0px 6px 6px rgba(70, 70, 70, 0.25);
+    overflow: scroll;
 }
 
 .todo-title {
@@ -156,10 +158,6 @@ button {
     padding: 0 1rem;
 }
 
-.button-group{
-    flex-wrap: nowrap;
-}
-
 .button-group button {
     border: 2px solid #eee;
     padding: 0.2rem 0.5rem;
@@ -180,7 +178,7 @@ button {
 
 p.info {
     margin-top: 1rem;
-    color: #ccc;
+    color: #666;
 }
 
 .edit-input {
@@ -191,4 +189,62 @@ p.info {
     height: 100%;
     margin: 0;
     box-sizing: border-box;
+}
+
+@media screen and (max-width: 1280px) {
+    .todo-wrapper {
+        width: 60%;
+        padding: 2rem 5%;
+    }
+
+    .todo-title {
+        font-size: 4rem;
+    }
+
+    .button-group button {
+        margin: 0 0.2rem;
+        font-size: .8rem;
+    }
+    
+    .button-group button.selected {
+        margin: 0 0.2rem;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .todo-list {
+        max-height: auto;
+        overflow-y: visible;
+    }
+    
+    .todo-bottom {
+        height: auto;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: .8rem;
+        padding: .8rem;
+    }
+
+    .button-group button:nth-of-type(1) {
+        margin: 0 0.2rem 0 0;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .todo-wrapper {
+        width: 80%;
+        min-width: 320px;
+    }
+
+    .todo-title {
+        font-size: 3rem;
+    }
+
+    .button-group button {
+        margin: 0.2rem;
+    }
+
+    .button-group button.selected {
+        margin: 0.2rem;
+    }
 }
