--- a/style.css
+++ b/style.css
@@ -21,7 +21,11 @@ body {
     padding: 2rem;
     border-radius: 20px;
     box-shadow: 0px 6px 6px rgba(70, 70, 70, 0.25);
-    overflow: scroll;
+    overflow-y: scroll;
+    scrollbar-width: none; /* 파이어폭스 */
+}
+.todo-wrapper::-webkit-scrollbar {
+    display: none;
 }
 
 .todo-title {
